--- a/netstandardDbSQLiteHelper/netstandardDbSQLiteHelper.csproj
+++ b/netstandardDbSQLiteHelper/netstandardDbSQLiteHelper.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.Data.SQLite.Core" Version="1.0.108.0" />
+    <PackageReference Include="Microsoft.Data.SQLite" Version="2.1.0" />
   </ItemGroup>
 
 </Project>
