Moving files to match new namespace

--- a/NC.Utilities.SQLite/NC.Utilities.SQLite.csproj
+++ b/NC.Utilities.SQLite/NC.Utilities.SQLite.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Version>1.0.0.1</Version>
+    <PackOnBuild>true</PackOnBuild>
+    <PackageVersion>1.0.0</PackageVersion>
+    <Authors>Nathaniel Collier</Authors>
+    <Description>Manages working with sqlite database files</Description>
   </PropertyGroup>
 
   <ItemGroup>
