--- a/tests/tests.csproj
+++ b/tests/tests.csproj
@@ -13,7 +13,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\netstandardDbSQLiteHelper\netstandardDbSQLiteHelper.csproj" />
+    <ProjectReference Include="..\NC.Utilities.SQLite\NC.Utilities.SQLite.csproj" />
   </ItemGroup>
-
 </Project>
