Fix some minor stuff in the project file

--- a/NC.Utilities.SQLite/NC.Utilities.SQLite.csproj
+++ b/NC.Utilities.SQLite/NC.Utilities.SQLite.csproj
@@ -2,12 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>1.0.0.1</Version>
-    <PackOnBuild>true</PackOnBuild>
     <PackageVersion>1.0.0</PackageVersion>
     <Authors>Nathaniel Collier</Authors>
     <Description>Manages working with sqlite database files</Description>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
 
   <ItemGroup>
